--- a/_posts/kien-thuc/he-mat-troi/hanh-tinh-lun/2021-06-01-ceres.html
+++ b/_posts/kien-thuc/he-mat-troi/hanh-tinh-lun/2021-06-01-ceres.html
@@ -28,7 +28,7 @@ model: ceres
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -46,7 +46,7 @@ model: ceres
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Ceres là hành tinh lùn nhỏ nhất được biết trong Hệ Mặt Trời và là hành tinh lùn duy nhất trong vành đai tiểu hành tinh chính ở khoảng giữa Sao Mộc và Sao Hỏa. Hành tinh lùn này được Giuseppe Piazzi phát hiện vào ngày 1 tháng 1 năm 1801, và được đặt tên theo nữ thần Hy Lạp Ceres – nữ thần của cây cỏ, mùa màng và tình mẫu tử. Trong một nửa thế kỷ nó được cho là hành tinh thứ 8.</p>
                     <p>Với đường kính khoảng 950 km (590 dặm), Ceres là vật thể lớn nhất và nặng nhất trong vành đai chính, và chiếm 32% tổng khối lượng vành đai chính. Các quan sát gần đây xác định được nó có dạng hình cầu, không giống như hình dạng bất định của các vật thể nhỏ hơn với lực hấp dẫn yếu hơn. Bề mặt của Ceres có thể là một hỗn hợp của băng nước và các khoáng vật hydrat khác nhau như carbonat và sét. Ceres có biểu hiện phân dị thành lõi đá và manti băng. Có thể có đại dương nước lỏng bên dưới bề mặt của nó.</p>
                     <p>Từ Trái Đất, cấp sao biểu kiến của Ceres vào khoảng 6,7 đến 9,3, và do đó lúc sáng nhất nó vẫn bị rất mờ khi nhìn bằng mắt thường. Vào ngày 27 tháng 9 năm 2007, NASA đã phóng tàu Dawn để thám hiểm Vesta (2011–2012) và Ceres (2015).</p>
