--- a/_posts/kien-thuc/he-mat-troi/hanh-tinh-lun/2021-06-01-haumea.html
+++ b/_posts/kien-thuc/he-mat-troi/hanh-tinh-lun/2021-06-01-haumea.html
@@ -28,7 +28,7 @@ model: haumea
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -45,7 +45,7 @@ model: haumea
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Haumea là một hành tinh lùn đã biết có vị trí nằm ở bên ngoài quỹ đạo của Sao Hải Vương. Nó được phát hiện năm 2004 bởi một nhóm do Mike Brown dẫn đầu tại Đài thiên văn Palomar, Mĩ, và được phát hiện một cách độc lập vào năm 2005 bởi một nhóm do José Luis Ortiz Moreno dẫn đầu tại đài thiên văn Sierra Nevada, Tây Ban Nha. Vào ngày 17 tháng 9 năm 2008, nó được đặt tên theo Haumea, nữ thần sinh sản Hawaii, với kì vọng của Liên đoàn Thiên văn Quốc tế (IAU) rằng nó sẽ được chứng minh là một hành tinh lùn. Có khả năng nó là thiên thể ngoài Sao Hải Vương đã biết lớn thứ ba, sau Eris và Sao Diêm Vương.</p>
                     <p>Trọng lượng của Haumea bằng khoảng một phần ba của Sao Diêm Vương, và 1/1400 của Trái Đất. Mặc dù không được quan sát một cách trực tiếp nhưng những tính toán từ phổ ánh sáng của nó cho thấy Haumea có dạng elipxoit Jacobi (hình dạng mà nếu nó là hành tinh lùn thì sẽ có hình dạng như thế), với chiều dài gấp đôi chiều rộng. Mặc dù vậy, trọng lực của nó vẫn đủ để duy trì cân bằng thủy tĩnh, phù hợp với tiêu chuẩn của hành tinh lùn. Hình dáng thuôn dài, cùng với tốc độ quay nhanh bất thường, mật độ lớn và độ phản xạ lớn (bề mặt cấu tạo bởi băng kết tinh) có thể là kết quả của một vụ va chạm lớn, mà Haumea là phần lớn nhất của rất nhiều mảnh vỡ bao gồm nhiều thiên thể bên ngoài Sao Hải Vương lớn cũng như hai vệ tinh đã biết của nó, Hiʻiaka và Namaka.</p>
                 </div>
