--- a/_posts/kien-thuc/he-mat-troi/hanh-tinh-lun/2021-06-01-makemake.html
+++ b/_posts/kien-thuc/he-mat-troi/hanh-tinh-lun/2021-06-01-makemake.html
@@ -28,7 +28,7 @@ model: makemake
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -45,7 +45,7 @@ model: makemake
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Makemake là hành tinh lùn lớn thứ 3 trong hệ Mặt Trời và là một trong 2 vật thể vòng đai Kuiper (KBO). Đường kính của nó vào khoảng 2/3 của Sao Diêm Vương. Makemake có một vệ tinh đã được phát hiện. Nhiệt độ trung bình cực kì thấp (khoảng 30 K) nghĩa rằng bề mặt của nó được bao bọc bởi mêtan, êtan và có thể nitơ băng.</p>
                     <p>Được biết đến như 2005 FY<sub>9</sub> (và sau đó được đưa cho cái tên số hiệu 136472 và tên thường gọi Makemake, lấy theo tên một vị thần trên đảo Phục Sinh), nó được phát hiện vào ngày 31 tháng 3 năm 2005 bởi một đội ngũ do Michael Brown đứng đầu, và công bố vào ngày 29 tháng 7 năm 2005. Ngày 11 tháng 6 năm 2008, Hiệp hội Thiên văn Quốc tế đã đưa Makemake vào danh sách những ứng cử viên cho tình trạng "giống Sao Diêm Vương" (plutoid), một thuật ngữ cho những hành tinh lùn ở ngoài quỹ đạo của Sao Hải Vương mà giống Sao Diêm Vương và Eris. Makemake được trang trọng xếp vào loại "plutoid" vào tháng 6 năm 2008.</p>
                 </div>
