--- a/_posts/kien-thuc/he-mat-troi/hanh-tinh-lun/2021-06-01-sao-diem-vuong.html
+++ b/_posts/kien-thuc/he-mat-troi/hanh-tinh-lun/2021-06-01-sao-diem-vuong.html
@@ -28,7 +28,7 @@ model: sao-diem-vuong
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -45,7 +45,7 @@ model: sao-diem-vuong
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Sao Diêm Vương là hành tinh lùn nặng thứ hai đã được biết trong Hệ Mặt Trời (sau Eris) và là vật thể nặng thứ mười trực tiếp quay quanh Mặt Trời.</p>
                     <p>Trước kia nó từng được xếp hạng là một hành tinh, Sao Diêm Vương hiện được coi là thành viên lớn nhất của một vùng riêng biệt được gọi là Vành đai Kuiper. Tương tự như các thành viên khác của vành đai này, nó chủ yếu gồm đá với băng và có kích thước khá nhỏ: xấp xỉ một phần năm khối lượng và một phần ba thể tích Mặt Trăng của Trái Đất. Sao Diêm Vương có quỹ đạo với độ lệch tâm lớn và rất nghiêng. Độ lệch tâm khiến nó có thể có khoảng cách từ 30 tới 49 AU (4.4—7.4 tỷ km) từ Mặt Trời, nên thỉnh thoảng Sao Diêm Vương ở gần Mặt Trời hơn Sao Hải Vương. Sao Diêm Vương và vệ tinh lớn nhất của nó, Charon, thường được coi là một hệ đôi bởi khối tâm của các quỹ đạo của chúng không nằm trong bất kỳ một vật thể nào. Hiệp hội Thiên văn Quốc tế (IAU) vẫn chưa chính thức hoá một định nghĩa cho các hệ hành tinh lùn đôi, và cho tới khi họ thông qua một quyết định như vậy, Charon vẫn được xếp hạng là một vệ tinh của Sao Diêm Vương. Sao Diêm Vương cũng có ba vệ tinh nhỏ hơn khác là Nix, Hydra, được khám phá năm 2005, và vệ tinh P4 được khám phá năm 2011.</p>
                     <p>Cũng như sao Kim và sao Thiên vương, sao Diêm vương tự quay theo chiều ngược. Chu kỳ tự quay của nó là -6,387 230 ngày hay -6d 09h 17m 36s.</p>
