--- a/_posts/kien-thuc/he-mat-troi/hanh-tinh/2021-04-01-mat-troi.html
+++ b/_posts/kien-thuc/he-mat-troi/hanh-tinh/2021-04-01-mat-troi.html
@@ -29,7 +29,7 @@ model: mat-troi
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: mat-troi
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p><strong>Mặt Trời là ngôi sao ở trung tâm Hệ Mặt Trời, chiếm khoảng 99,86% khối lượng của Hệ Mặt Trời.</strong> Trái Đất và các thiên thể khác như các hành tinh, tiểu hành tinh, thiên thạch, sao chổi, và bụi quay quanh Mặt Trời. Mặt Trời có khối lượng gấp khoảng 330.000 lần Trái đất.</p>
                     <p><strong>Khoảng cách trung bình giữa Mặt Trời và Trái Đất</strong> xấp xỉ 149,6 triệu kilômét (1 Đơn vị thiên văn AU) nên ánh sáng Mặt Trời cần 8 phút 19 giây mới đến được Trái Đất.</p>
                     <p><strong>Thành phần của Mặt Trời</strong> gồm hydro (khoảng 74% khối lượng, hay 92% thể tích), heli (khoảng 24% khối lượng, 7% thể tích), và một lượng nhỏ các nguyên tố khác, gồm sắt, nickel, oxy, silic, lưu huỳnh, magiê, carbon, neon, canxi, và crom.</p>
