--- a/_posts/kien-thuc/he-mat-troi/hanh-tinh/2021-04-02-sao-thuy.html
+++ b/_posts/kien-thuc/he-mat-troi/hanh-tinh/2021-04-02-sao-thuy.html
@@ -28,7 +28,7 @@ model: sao-thuy
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: sao-thuy
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p><strong>Sao Thủy là hành tinh nhỏ nhất và gần Mặt Trời nhất</strong> trong tám hành tinh thuộc Hệ Mặt Trời, với chu kỳ quỹ đạo bằng 88 ngày Trái Đất. Nhìn từ Trái Đất, hành tinh hiện lên với chu kỳ giao hội trên quỹ đạo bằng xấp xỉ 116 ngày, và nhanh hơn hẳn những hành tinh khác. Tốc độ chuyển động nhanh này đã khiến người La Mã đặt tên hành tinh là Mercurius, vị thần liên lạc và đưa tin một cách nhanh chóng. Trong thần thoại Hy Lạp tên của vị thần này là Hermes (Ερμής). Tên tiếng Việt của hành tinh này dựa theo tên do Trung Quốc đặt, chọn theo hành thủy trong ngũ hành.</p>
                     <p>Do hành tinh hầu như không có khí quyển để giữ lại nhiệt lượng, <strong>bề mặt Sao Thủy trải qua sự biến đổi nhiệt độ lớn nhất trong số các hành tinh</strong>, thay đổi từ 100 K (−173 °C; −280 °F) vào ban đêm tới 700 K (427 °C; 800 °F) vào ban ngày. Trục quay của Sao Thủy có độ nghiêng nhỏ nhất trong Hệ Mặt Trời (khoảng 1⁄30 độ), nhưng hành tinh lại có độ lệch tâm quỹ đạo lớn nhất. Tại viễn điểm quỹ đạo, Sao Thủy ở cách xa Mặt Trời hơn 1,5 lần khi so với hành tinh ở cận điểm quỹ đạo. Bề mặt hành tinh có rất nhiều hố va chạm nhìn trông giống như bề mặt của Mặt Trăng, và hành tinh không còn hoạt động địa chất trong hàng tỷ năm trước.</p>
                     <p><strong>Trên Sao Thủy không có sự biến đổi thời tiết theo mùa như ở các hành tinh khác</strong> bởi vì nó không có bầu khí quyển đáng kể. Hành tinh bị khóa thủy triều với Mặt Trời do đó nó quay trên quỹ đạo rất khác so với các hành tinh khác. Khi lấy các ngôi sao cố định làm điểm mốc, nó tự quay được chính xác ba vòng trong hai chu kỳ quỹ đạo quanh Mặt Trời. Khi nhìn từ Mặt Trời, trong hệ quy chiếu quay cùng với chuyển động quỹ đạo, hành tinh hiện lên chỉ quay quanh trục một lần trong hai "năm" Sao Thủy. Do vậy nếu có người đứng trên Sao Thủy họ chỉ nhận thấy 1 ngày trong 2 năm.</p>
