--- a/_posts/kien-thuc/he-mat-troi/hanh-tinh/2021-04-03-sao-kim.html
+++ b/_posts/kien-thuc/he-mat-troi/hanh-tinh/2021-04-03-sao-kim.html
@@ -28,7 +28,7 @@ model: sao-kim
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: sao-kim
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p><strong>Sao Kim là hành tinh thứ hai trong hệ Mặt Trời</strong>, tự quay quanh nó với chu kỳ 224,7 ngày Trái Đất. Xếp sau Mặt Trăng, nó là thiên thể tự nhiên sáng nhất trong bầu trời tối, với cấp sao biểu kiến bằng −4.6, đủ sáng để tạo nên bóng trên mặt nước. Bởi vì Sao Kim là hành tinh phía trong tính từ Trái Đất, nó không bao giờ xuất hiện trên bầu trời mà quá xa Mặt Trời: góc ly giác đạt cực đại bằng 47,8°. Sao Kim đạt độ sáng lớn nhất ngay sát thời điểm hoàng hôn hoặc bình minh, do vậy mà dân gian còn gọi là sao Hôm, khi hành tinh này hiện lên lúc hoàng hôn, và sao Mai, khi hành tinh này hiện lên lúc bình minh.</p>
                     <p><strong>Sao Kim được xếp vào nhóm hành tinh đất đá</strong> và đôi khi người ta còn coi nó là "hành tinh chị em" với Trái Đất do kích cỡ, gia tốc hấp dẫn, tham số quỹ đạo gần giống với Trái Đất. Tuy nhiên, người ta đã chỉ ra rằng nó rất khác Trái Đất trên những mặt khác. Sao Kim bị bao bọc bởi lớp mây dày có tính phản xạ cao chứa axít sunfuric, và khiến chúng ta không thể quan sát bề mặt của nó dưới bước sóng ánh sáng khả kiến. Mật độ không khí trong khí quyển của nó lớn nhất trong số bốn hành tinh đất đá, thành phần chủ yếu là cacbon điôxít. Áp suất khí quyển tại bề mặt hành tinh cao gấp 92 lần so với của Trái Đất. Với nhiệt độ bề mặt trung bình bằng 735 K (462 °C), Sao Kim là hành tinh nóng nhất trong Hệ Mặt Trời. Nó không có chu trình cacbon để đưa cacbon trở lại đá và đất trên bề mặt, do vậy không thể có một tổ chức sống hữu cơ nào có thể hấp thụ nó trong sinh khối. Một số nhà khoa học từng cho rằng Sao Kim đã có những đại dương trong quá khứ, nhưng đã bốc hơi khi nhiệt độ hành tinh tăng lên do hiệu ứng nhà kính mất kiểm soát. Nước có thể đã bị quang ly, và bởi vì không có từ quyển hành tinh, hiđrô tự do có thể thoát vào vũ trụ bởi tác động của gió Mặt Trời. Toàn bộ bề mặt của Sao Kim là một hoang mạc khô cằn với đá và bụi và có lẽ vẫn còn núi lửa hoạt động trên hành tinh này.</p>
                     <p><strong>Sao Kim quay quanh trục cùng chiều kim đồng hồ (gọi là sự quay nghịch hành)</strong> với khoảng thời gian 243 ngày Trái Đất — tốc độ tự quay chậm nhất của hành tinh trong Hệ Mặt Trời. Do vậy một "ngày" (thời gian sao - sidereal day) trên Sao Kim dài hơn một "năm" của Sao Kim. Và vì quay ngược như vậy nên bình minh trên Sao Kim sẽ ở phía Tây và hoàng hôn thì lại ở phía Đông.</p>
