--- a/_posts/kien-thuc/he-mat-troi/hanh-tinh/2021-04-04-trai-dat.html
+++ b/_posts/kien-thuc/he-mat-troi/hanh-tinh/2021-04-04-trai-dat.html
@@ -28,15 +28,17 @@ model: trai-dat
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
                         <p><strong>Khoảng cách từ Mặt trời: </strong>149.600.000 km</p>
                         <p><strong>Diện tích bề mặt: </strong>510.100.000 km²</p>
-                        <p><strong>Diện tích: </strong>148.900.000 km²</p>
+                        <p><strong>Diện tích đất: </strong>148.900.000 km² (29,2%)</p>
+                        <p><strong>Diện tích nước: </strong>312 369 000 km² (70,8%)</p>
                         <p><strong>Bán kính: </strong>6.371 km</p>
-                        <p><strong>Khối lượng: </strong> 5,972E24 kg</p>
+                        <p><strong>Khối lượng: </strong>5,972E24 kg</p>
+                        <p><strong>Chu kỳ tự quay: </strong>23,934 giờ</p>
                     </div>
                 </div>
             </div>
@@ -45,8 +47,10 @@ model: trai-dat
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
-                    <p>Trái Đất là hành tinh thứ ba tính từ Mặt Trời, đồng thời cũng là hành tinh lớn nhất trong các hành tinh đất đá của hệ Mặt Trời xét về bán kính, khối lượng và mật độ vật chất. Trái Đất còn được biết tên với các tên gọi "hành tinh xanh", là nhà của hàng triệu loài sinh vật, trong đó có con người và cho đến nay nó là nơi duy nhất trong vũ trụ được biết đến là có sự sống. Hành tinh này được hình thành cách đây 4,55 tỷ năm và sự sống xuất hiện trên bề mặt của nó khoảng 1 tỷ năm trước. Kể từ đó, sinh quyển, khí quyển của Trái Đất và các điều kiện vô cơ khác đã thay đổi đáng kể, tạo điều kiện thuận lợi cho sự phổ biến của các vi sinh vật ưa khí cũng như sự hình thành của tầng ôzôn-lớp bảo vệ quan trọng, cùng với từ trường của Trái Đất, đã ngăn chặn các bức xạ có hại và chở che cho sự sống. Các đặc điểm vật lý của Trái Đất cũng như lịch sử địa lý hay quỹ đạo, cho phép sự sống tồn tại trong thời gian qua. Người ta ước tính rằng Trái Đất chỉ còn có thể hỗ trợ sự sống thêm 1,5 tỷ năm nữa, trước khi kích thước của Mặt Trời tăng lên (trở thành sao khổng lồ đỏ) và tiêu diệt hết sự sống.</p>
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
+                    <p><strong>Trái Đất là hành tinh thứ ba tính từ Mặt Trời</strong>, đồng thời cũng là hành tinh lớn nhất trong các hành tinh đất đá của hệ Mặt Trời xét về bán kính, khối lượng và mật độ vật chất.</p>
+                    <p>Trái Đất còn được biết tên với các tên gọi "hành tinh xanh", là nhà của hàng triệu loài sinh vật, trong đó có con người và cho đến nay nó là nơi duy nhất trong vũ trụ được biết đến là có sự sống.</p>
+                    <p><strong>Hành tinh này được hình thành cách đây khoảng 4,55 tỷ năm</strong> và sự sống xuất hiện trên bề mặt của nó khoảng 1 tỷ năm trước. Kể từ đó, sinh quyển, khí quyển của Trái Đất và các điều kiện vô cơ khác đã thay đổi đáng kể, tạo điều kiện thuận lợi cho sự phổ biến của các vi sinh vật ưa khí cũng như sự hình thành của tầng ôzôn-lớp bảo vệ quan trọng, cùng với từ trường của Trái Đất, đã ngăn chặn các bức xạ có hại và chở che cho sự sống. Các đặc điểm vật lý của Trái Đất cũng như lịch sử địa lý hay quỹ đạo, cho phép sự sống tồn tại trong thời gian qua. Người ta ước tính rằng Trái Đất chỉ còn có thể hỗ trợ sự sống thêm 1,5 tỷ năm nữa, trước khi kích thước của Mặt Trời tăng lên (trở thành sao khổng lồ đỏ) và tiêu diệt hết sự sống.</p>
                     <p>Bề mặt Trái Đất được chia thành các mảng kiến tạo, chúng di chuyển từ từ trên bề mặt Trái Đất trong hàng triệu năm. Khoảng 71% bề mặt Trái Đất được bao phủ bởi các đại dương nước mặn, phần còn lại là các lục địa và các đảo. Nước là thành phần rất cần thiết cho sự sống và cho đến nay con người vẫn chưa phát hiện thấy sự tồn tại của nó trên bề mặt của bất kì hành tinh nào khác ngoại trừ sao Hỏa là có nước bị đóng băng ở hai cực. Tuy nhiên, người ta có chứng cứ xác định nguồn nước có ở Sao Hỏa trong quá khứ, và có thể tồn tại cho tới ngày nay. Lõi của Trái Đất vẫn hoạt động được bao bọc bởi lớp manti rắn dày, lớp lõi ngoài lỏng tạo ra từ trường và lõi sắt trong rắn.</p>
                     <p>Trái Đất tương tác với các vật thể khác trong không gian bao gồm Mặt Trời và Mặt Trăng. Hiện quãng thời gian Trái Đất di chuyển hết một vòng quanh Mặt Trời bằng 365,2564 lần quãng thời gian nó tự quay một vòng quanh trục của mình. Khoảng thời gian này bằng với một năm thiên văn tức 365,2564 ngày trong dương lịch. Trục tự quay của Trái Đất nghiêng một góc bằng 23,44° so với trục vuông góc với mặt phẳng quỹ đạo, tạo ra sự thay đổi mùa trên bề mặt của Trái Đất trong một năm chí tuyến. Mặt Trăng, vệ tinh tự nhiên duy nhất của Trái Đất, đồng thời cũng là nguyên nhân chính gây ra hiện tượng thủy triều đại dương, bắt đầu quay quanh Trái Đất từ 4,53 tỷ năm trước, vẫn giữ nguyên góc quay ban đầu theo thời gian nhưng đang chuyển động chậm dần lại. Trong khoảng từ 4,1 đến 3,8 tỷ năm trước, sự va đập của các thiên thạch trong suốt thời kì "Công phá Mạnh muộn" đã tạo ra những sự thay đổi đáng kể trên bề mặt Mặt Trăng.</p>
                     <p>Cả tài nguyên khoáng sản lẫn các sản phẩm của sinh quyển Trái Đất được sử dụng để cung cấp cho cuộc sống của con người. Dân cư được chia thành hơn hàng trăm quốc gia độc lập, có quan hệ với nhau thông qua các hoạt động ngoại giao, du lịch, thương mại, quân sự. Văn hóa loài người đã phát triển tạo nên nhiều cách nhìn về Trái Đất bao gồm việc nhân cách hóa Trái Đất như một vị thần, niềm tin vào một Trái Đất phẳng hoặc Trái Đất là trung tâm của cả vũ trụ, và một quan điểm nhìn hiện đại hơn như Trái Đất là một môi trường thống nhất cần có sự định hướng.</p>
