--- a/_posts/kien-thuc/he-mat-troi/hanh-tinh/2021-04-08-sao-thien-vuong.html
+++ b/_posts/kien-thuc/he-mat-troi/hanh-tinh/2021-04-08-sao-thien-vuong.html
@@ -28,13 +28,17 @@ model: sao-thien-vuong
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
                         <p><strong>Diện tích bề mặt: </strong>8,083E9 km²</p>
                         <p><strong>Khoảng cách từ Mặt trời: </strong>2,871E9 km</p>
                         <p><strong>Bán kính: </strong>25.362 km</p>
+                        <p><strong>Thể tích: </strong>6,833×10<sup>13</sup> km<sup>3</sup></p>
+                        <p><strong>Khối lượng: </strong>(8,6810 ± 0,0013)×10<sup>25</sup> kg</p>
+                        <p><strong>Độ nghiêng trục quay: </strong>97,77°</p>
+                        <p><strong>Chu vi: </strong>159.354,1 km</p>
                     </div>
                 </div>
             </div>
@@ -43,9 +47,10 @@ model: sao-thien-vuong
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
-                    <p>Sao Thiên Vương là hành tinh thứ bảy tính từ Mặt Trời; là hành tinh có bán kính lớn thứ ba và có khối lượng lớn thứ tư trong Hệ Mặt Trời. Sao Thiên Vương có thành phần tương tự như Sao Hải Vương. Cả hai có thành phần hóa học khác so với hai hành tinh khí khổng lồ lớn hơn là Sao Mộc và Sao Thổ. Vì vậy, các nhà thiên văn thỉnh thoảng đưa các hành tinh này vào danh sách "hành tinh băng khổng lồ". Khí quyển của Sao Thiên Vương tương tự như của Sao Mộc và Sao Thổ về thành phần cơ bản như hiđrô và heli. Khác là chúng chứa nhiều hợp chất dễ bay hơi như nước, amoniac và mêtan cùng với lượng nhỏ hiđrôcacbon. Hành tinh này có bầu khí quyển lạnh nhất trong số các hành tinh trong Hệ Mặt Trời, với nhiệt độ cực tiểu bằng 49 K (−224 °C). Nó có cấu trúc tầng mây phức tạp. Khả năng những đám mây thấp nhất chứa chủ yếu nước trong khi mêtan lại chiếm chủ yếu trong những tầng mây phía trên. Ngược lại, cấu trúc bên trong Sao Thiên Vương chỉ chứa chủ yếu một lõi băng và đá.</p>
-                    <p>Giống như những hành tinh khí khổng lồ khác, Sao Thiên Vương có một hệ thống vành đai, từ quyển và rất nhiều vệ tinh tự nhiên. Hệ thống Sao Thiên Vương có cấu trúc độc nhất bởi vì trục tự quay của nó bị nghiêng rất lớn, gần như song song với mặt phẳng quỹ đạo của hành tinh. Do vậy cực bắc và cực nam của hành tinh này nằm gần như tại vị trí xích đạo so với những hành tinh khác. Năm 1986, những ảnh chụp của tàu không gian Voyager 2 cho thấy Sao Thiên Vương qua ánh sáng khả kiến hiện lên với một màu gần như đồng nhất mà không có các dải mây hay cơn bão như những hành tinh khí khổng lồ khác. Các nhà thiên văn thực hiện quan sát từ mặt đất phát hiện ra dấu hiệu của sự thay đổi mùa và sự gia tăng hoạt động thời tiết trong những năm gần đây khi nó tiếp cận đến vị trí điểm phân trên quỹ đạo. Tốc độ gió trên Sao Thiên Vương đạt tới 250 mét trên giây (900 km/h).</p>
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
+                    <p><strong>Sao Thiên Vương là hành tinh thứ bảy tính từ Mặt Trời; là hành tinh có bán kính lớn thứ ba và có khối lượng lớn thứ tư trong Hệ Mặt Trời</strong>. Sao Thiên Vương có thành phần tương tự như Sao Hải Vương. Cả hai có thành phần hóa học khác so với hai hành tinh khí khổng lồ lớn hơn là Sao Mộc và Sao Thổ. Vì vậy, các nhà thiên văn thỉnh thoảng đưa các hành tinh này vào danh sách "hành tinh băng khổng lồ". Khí quyển của Sao Thiên Vương tương tự như của Sao Mộc và Sao Thổ về thành phần cơ bản như hiđrô và heli. Khác là chúng chứa nhiều hợp chất dễ bay hơi như nước, amoniac và mêtan cùng với lượng nhỏ hiđrôcacbon.</p>
+                    <p><strong>Hành tinh này có bầu khí quyển lạnh nhất trong số các hành tinh trong Hệ Mặt Trời</strong>, với nhiệt độ cực tiểu bằng 49 K (−224 °C). Nó có cấu trúc tầng mây phức tạp. Khả năng những đám mây thấp nhất chứa chủ yếu nước trong khi mêtan lại chiếm chủ yếu trong những tầng mây phía trên. Ngược lại, cấu trúc bên trong Sao Thiên Vương chỉ chứa chủ yếu một lõi băng và đá.</p>
+                    <p>Giống như những hành tinh khí khổng lồ khác, <strong>Sao Thiên Vương có một hệ thống vành đai, từ quyển và rất nhiều vệ tinh tự nhiên</strong>. Hệ thống Sao Thiên Vương có cấu trúc độc nhất bởi vì trục tự quay của nó bị nghiêng rất lớn, gần như song song với mặt phẳng quỹ đạo của hành tinh. Do vậy cực bắc và cực nam của hành tinh này nằm gần như tại vị trí xích đạo so với những hành tinh khác. Năm 1986, những ảnh chụp của tàu không gian Voyager 2 cho thấy Sao Thiên Vương qua ánh sáng khả kiến hiện lên với một màu gần như đồng nhất mà không có các dải mây hay cơn bão như những hành tinh khí khổng lồ khác. Các nhà thiên văn thực hiện quan sát từ mặt đất phát hiện ra dấu hiệu của sự thay đổi mùa và sự gia tăng hoạt động thời tiết trong những năm gần đây khi nó tiếp cận đến vị trí điểm phân trên quỹ đạo. Tốc độ gió trên Sao Thiên Vương đạt tới 250 mét trên giây (900 km/h).</p>
                 </div>
             </div>
         </div>
