--- a/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-khoang-cach-cac-hanh-tinh-den-mat-troi-neu-mat-trang-chi-to-bang-mot-diem-anh.html
+++ b/_posts/kien-thuc/he-mat-troi/tong-hop/2021-07-01-khoang-cach-cac-hanh-tinh-den-mat-troi-neu-mat-trang-chi-to-bang-mot-diem-anh.html
@@ -54,7 +54,7 @@ image: khoang-cach-cac-hanh-tinh-den-mat-troi-neu-mat-trang-chi-to-bang-mot-diem
                         </div>
                     </div>
                     <div class="col-12 col-lg-12 margin-30px-bottom">
-                        <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                        <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
                             <h6 class="alt-font font-weight-600">
                                 Chú thích:
                             </h6>
