--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-01-mat-trang.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-01-mat-trang.html
@@ -29,7 +29,7 @@ model: mat-trang
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -46,7 +46,7 @@ model: mat-trang
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Mặt Trăng là vệ tinh tự nhiên duy nhất của Trái Đất và là vệ tinh tự nhiên lớn thứ năm trong Hệ Mặt Trời.</p>
                     <p>Khoảng cách trung bình tính từ tâm Trái Đất đến Mặt Trăng là 384.403 km, lớn khoảng 30 lần đường kính Trái Đất. Đường kính Mặt Trăng là 3.474 km, bằng 27% đường kính Trái Đất. Khối lượng Mặt Trăng khoảng bằng 2% khối lượng Trái Đất và lực hấp dẫn tại bề mặt Mặt Trăng bằng 17% lực hấp dẫn trên bề mặt Trái Đất. Mặt Trăng quay một vòng quanh Trái Đất với chu kỳ quỹ đạo 27,32 ngày, và các biến đổi định kỳ trong hình học của hệ Trái Đất – Mặt Trăng – Mặt Trời là nguyên nhân gây ra các pha Mặt Trăng, lặp lại sau mỗi chu kỳ giao hội 29,53 ngày.</p>
                     <p>Tính đến năm 2020, Mặt Trăng là thiên thể duy nhất ngoài Trái Đất mà con người đã đặt chân tới. Năm 1959 là năm mang tính lịch sử đối với công cuộc khám phá Mặt Trăng, mở đầu bằng chuyến bay của vệ tinh nhân tạo Luna 1 của Liên bang Xô viết đến phạm vi của Mặt Trăng, tiếp đó Luna 2 rơi xuống bề mặt của Mặt Trăng và Luna 3 lần đầu tiên cung cấp ảnh mặt sau của Mặt Trăng. Năm 1966, Luna 9 trở thành tàu vũ trụ đầu tiên hạ cánh thành công và Luna 10 là tàu vũ trụ không người lái đầu tiên bay quanh Mặt Trăng. Hiện nay, các miệng hố đen ở vùng cực Nam của Mặt Trăng là nơi lạnh nhất trong hệ Mặt Trời.</p>
