--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-02-deimos.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-02-deimos.html
@@ -29,7 +29,7 @@ model: deimos
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: deimos
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Deimos là vệ tinh nhỏ hơn và ở xa hơn phía ngoài trong số hai vệ tinh của Sao Hoả, được đặt theo tên Deimos (con trai của thần chiến tranh Ares và sắc đẹp Aphrodite) trong Thần thoại Hy Lạp. Nó cũng được gọi là Mars II.</p>
                     <p>Cả Phobos và Deimos đều được nhà thiên văn học Mỹ là Asaph Hall phát hiện. Tên của hai vệ tinh này được Henry Madan (1838–1901), giáo sư toán học Eton College đề xuất từ cuốn XV tác phẩm Iliad, theo tên hai con thần chiến tranh Ares (Mars trong thần thoại La Mã) là Kinh hoàng (Deimos) và Khiếp sợ (Phobos).</p>
                     <p>Deimos được phát hiện ngày 12 tháng 8 năm 1877 lúc khoảng 07:48 UTC (theo những nguồn tin thời ấy là lúc "14:40 11 tháng 8" theo giờ Washington tính ngày theo quy ước thiên văn cũ, bắt đầu vào lúc giữa trưa, vì thế phải cộng thêm 12 tiếng vào giờ địa phương).</p>
