--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-02-phobos.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-02-phobos.html
@@ -29,7 +29,7 @@ model: phobos
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: phobos
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Phobos là vệ tinh lớn và sát bề mặt sao Hỏa nhất trong số hai vệ tinh của nó (vệ tinh kia là Deimos), được đặt theo tên của con trai của Ares (Mars) và Aphrodite trong Thần thoại Hy Lạp. Thực tế ra, Phobos là vệ tinh ở gần bề mặt hành tinh chính hơn bất kỳ một vệ tinh tự nhiên nào khác trong hệ mặt trời, với khoảng cách đến Sao Hỏa chưa tới 6.000 km (3.728 dặm). Nó cũng là một trong số những vệ tinh tự nhiên nhỏ nhất từng được phát hiện trong hệ mặt trời. Tên theo hệ thống định danh của nó là Mars I.</p>
                 </div>
             </div>
