--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-03-callisto.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-03-callisto.html
@@ -29,7 +29,7 @@ model: callisto
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: callisto
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Callisto được Galileo Galilei phát hiện năm 1610, là vệ tinh lớn thứ hai của Sao Mộc. Trong hệ Mặt Trời, Callisto là vệ tinh lớn thứ ba, sau Ganymede cũng của Sao Mộc và vệ tinh Titan của Sao Thổ. Tuy kích thước bằng 99% Sao Thủy nhưng do có khối lượng riêng nhỏ, khối lượng của Callisto chỉ bằng 1/3 so với Sao Thủy. Trong số 4 vệ tinh lớn của Sao Mộc mà Galilei đã phát hiện từ thế kỉ 17, Callisto có khoảng cách với Sao Mộc xa nhất, trung bình 1.880.000 km. Callisto cũng không tạo ra với 3 vệ tinh lớn còn lại hệ quỹ đạo cộng hưởng (1 chu kì quanh Sao Mộc của Ganymede bằng 2 lần chu kì của Europa và bằng 4 lần của Io). Dưới sức hút cực lớn của một "hành tinh khí khổng lồ" (gas giant) như Sao Mộc, một mặt của Callisto luôn luôn hướng về phía Sao Mộc, giống như Mặt Trăng luôn chỉ quay một mặt về phía Trái Đất. Do ở xa nhất trong 4 vệ tinh lớn, tác động của lực hấp dẫn và từ trường của Sao Mộc lên Callisto là yếu nhất[8]. Với những vệ tinh gần hơn, sức hút của Sao Mộc làm biến dạng chúng, khiến các lớp của những vệ tinh này ma sát sinh ra năng lượng. Ví dụ điển hình là Io, vệ tinh lớn nằm gần Sao Mộc nhất, dưới tác động của những năng lượng ngoại sinh này, đã hình thành các núi lửa vẫn đang hoạt động.</p>
                     <p>Callisto có cấu tạo một nửa là đất đá và nửa còn lại là băng, khối lượng riêng xấp xỉ 1,83 g/cm3. Theo những quan sát quang phổ, bề mặt của Callisto được cấu tạo từ băng nước, C02, silicates và các hợp chất hữu cơ. Tàu thám hiểm Galileo khi nghiên cứu Sao Mộc và các vệ tinh của nó đã chỉ ra rằng, rất có thể ở phía dưới lớp bề mặt băng đá 1.000 km là một đại dương.</p>
                     <p>Bề mặt của Callisto có rất nhiều những hố thiên thạch và được hình thành ngay trong giai đoạn đầu. Không hề thấy dấu vết về những hoạt động địa chất của Callisto gần đây, không có động đất hay núi lửa cũng như sự chuyển dịch của các địa tầng. Địa hình của Callisto chủ yếu là các chuỗi hố thiên thạch nhiều hình dáng, những vết đứt gãy địa tầng, những rặng núi và đá cát kết. Xét một cách chi tiết, bề mặt của Callisto là rất đa dạng, với những lớp băng kết có màu sáng ở cao hơn những vành đai đất đá mịn và sẫm màu. Chúng có thể là kết quả của những quá trình thay đổi địa chất cùng với tác động của nhiều vụ va chạm thiên thạch đã xảy ra trong quá khứ. Hiện tại chưa xác định được tuổi của những biến đổi này.</p>
