--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-03-europa.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-03-europa.html
@@ -29,7 +29,7 @@ model: europa
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: europa
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Europa là vệ tinh thứ sáu, tính theo quỹ đạo từ trong ra ngoài, của Sao Mộc. Europa được Galileo Galilei và Simon Marius phát hiện năm 1610. Hai nhà khoa học này có thể đã phát hiện ra vệ tinh này đồng thời và độc lập nhau. Trong số 4 vệ tinh lớn của Sao Mộc được phát hiện trong năm 1610, Europa là vệ tinh nhỏ nhất.</p>
                     <p>Europa có đường kính 3.100 km, nhỏ hơn Mặt Trăng một chút. Trong Hệ Mặt Trời, Europa là vệ tinh lớn thứ 6 và là vệ tinh nhỏ nhất trong nhóm Galileo, sau 3 vệ tinh lớn hơn của Sao Mộc, Titan của Sao Thổ và Mặt Trăng của Trái Đất. Mặc dù vậy, Europa vẫn có khối lượng lớn hơn tổng cộng những vệ tinh nhỏ hơn trong hệ Mặt trời cộng lại. Cấu tạo của Europa chủ yếu là đá silicate và có thể có lõi bằng sắt. Bề mặt của Europa được tạo thành từ những kiến tạo địa chất gần đây, có nhiều vết nứt và vỉa đá. Europa có rất ít hố thiên thạch. Bề mặt trẻ và rất mịn của Europa khiến các nhà khoa học tin rằng bên dưới lớp ngoài cùng là một lớp nước. Và rất có thể trong đại dương ngầm này đang ẩn giấu sự sống ngoài Trái Đất mà chúng ta đang tìm kiếm. Nhiệt năng sản sinh ra do ma sát giữa các lớp vật chất của Europa dưới tác động của Sao Mộc đủ để giữ cho đại dương này luôn đủ ấm để không bị đóng băng và duy trì những hoạt động địa chất ở lớp vỏ ngoài của nó.</p>
                     <p>Con người mới chỉ tiếp cận được Europa bằng những tàu vũ trụ bay ngang qua bề mặt vệ tinh này. Mặc dù vậy, những đặc điểm rất đáng chú ý của Europa khiến nó trở thành một trong những thiên thể có khả năng tồn tại sự sống cao nhất trong hệ Mặt Trời. Rất nhiều dự án tham vọng coi Europa là điểm đến cho công cuộc nghiên cứu vũ trụ của con người. Trong số đó có thể kể đến dự án tàu thám hiểm Galileo, đã cung cấp rất nhiều dữ liệu về bề mặt Europa, và dự án Jupiter Icy Moons Orbiter – nay đã bị dừng lại – nhằm nghiên cứu Europa, Ganymede và Callisto. Hiện tại rất nhiều dự án thám hiểm vệ tinh đang được đề nghị cấp vốn nghiên cứu. Trong tương lai không xa, Europa sẽ là điểm đến cho những dự án vũ trụ mới của con người.</p>
