--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-03-ganymede.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-03-ganymede.html
@@ -29,7 +29,7 @@ model: ganymede
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: ganymede
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Ganymede là vệ tinh tự nhiên lớn nhất của Sao Mộc và cũng là vệ tinh lớn nhất trong hệ Mặt Trời. Thậm chí nó còn lớn hơn cả Sao Diêm Vương, vốn đã từng được coi là một hành tinh (bán kính 2.634,1 km so với 1.195 km hay 2,2 lần, thể tích 7,6 × 10¹° km³ so với 0,715 × 10¹° km hay 11 lần và khối lượng 148,19 × 10²¹ kg so với 12,5 × 10²¹ kg hay 12 lần). Ganymede quay một vòng quanh Sao Mộc hết hơn 7 ngày. Tính theo khoảng cách đến Sao Mộc, Ganymede là vệ tinh đứng thứ 7 trong tất cả các vệ tinh và đứng thứ 3 trong 4 vệ tinh lớn của Sao Mộc (4 vệ tinh Galile). Ganymede tham gia vào hiện tượng cộng hưởng quỹ đạo với Europa và Io theo tỉ lệ 1: 2: 4 (Ganymede quay 1 vòng quanh Sao Mộc trong thời gian Europa quay 2 vòng và Io quay 4 vòng). Ganymede to hơn Sao Thủy nhưng do mật độ thấp nên nó chỉ nhẹ bằng một nửa Sao Thủy.</p>
                     <p>Vệ tinh Ganymede có thành phần chủ yếu từ đá silicate và băng đá. Ganymede được phân lớp đầy đủ thành các lớp riêng biệt với một lõi nóng chảy giàu sắt. Các nhà khoa học tin rằng giữa các lớp băng của Ganymede là một biển nước muối dày nằm sâu 200 km trong lòng vệ tinh. Bề mặt của nó có 2 kiểu địa hình chính. Vùng tối màu có vô số những hố thiên thạch, được hình thành 4 tỉ năm trước và chiếm 1/3 diện tích bề mặt vệ tinh. Phần còn lại là vùng sáng màu hơn có nhiều những rặng núi và đường rãnh hình thành muộn hơn một chút. Nguyên nhân của những vết đứt gãy địa tầng xuất hiện trên vùng sáng của Ganymede có thể là từ những hoạt động địa chất sinh ra từ nhiệt ma sát do biến dạng của Ganymede dưới lực hấp dẫn từ Sao Mộc.</p>
                     <p>Ganymede là vệ tinh duy nhất trong hệ Mặt Trời đã phát hiện được sự xuất hiện của quyển từ. Từ quyển của Ganymede rất yếu sinh ra do những quá trình đối lưu trong phần lõi kim loại nóng chảy của nó. Từ quyển này gần như không đáng kể khi so với từ trường cực mạnh của Sao Mộc. Từ quyển của Ganymede kết nối với từ trường của Sao Mộc bằng các đường sức từ không khép kín. Người ta cũng đã phát hiện ra dấu vết của một lớp khí quyển rất mỏng trên bề mặt của Ganymede. Khí quyển này chứa O, O2 và O3. Hydro nguyên tử cũng xuất hiện mặc dù rất ít trong thành phần của khí quyển Ganymede. Chưa tìm thấy bằng chứng rõ rệt về tầng điện li tương ứng với tầng khí quyển của Ganymede.</p>
