--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-04-dione.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-04-dione.html
@@ -29,7 +29,7 @@ model: dione
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: dione
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Dione là một vệ tinh của sao Thổ. Nó được nhà thiên văn học người Ý Giovanni Domenico Cassini phát hiện vào năm 1684. Nó được đặt tên theo nữ thần Titan Dione của thần thoại Hy Lạp. Nó cũng được gọi là sao Thổ IV.</p>
                     <p>Giovanni Domenico Cassini đặt tên bốn vệ tinh mà ông phát hiện ra (Tethys, Dione, Rhea và Iapetus)  Sidera Lodoicea ("các ngôi sao của Louis") để tôn vinh vua Louis XIV. Cassini tìm thấy Dione năm 1684 bằng cách sử dụng một lượng lớn kính viễn vọng trên cao do ông thành lập ra trên cơ sở của Đài thiên văn Paris. Các vệ tinh này của sao Thổ đã không có tên cho đến năm 1847, khi William Herschel, con trai của John Herschel, công bố Results of Astronomical Observations made at the Cape of Good Hope, trong đó ông đề nghị lấy tên của các Titan (anh chị em của Cronus) để đặt tên cho chúng.</p>
                     <p>Dione của sao Thổ quay quanh một trục lớn có đường kính nhỏ hơn khoảng 2% so với Mặt Trăng. Tuy nhiên, do Sao Thổ có khối lượng lớn hơn, chu kỳ quỹ đạo Dione chỉ bằng một phần mười của Mặt Trăng. Dione hiện đang trong chuyển động cộng hưởng quỹ đạo với mặt trăng Enceladus theo tỷ lệ 1: 2, nghĩa là nó hoàn thành một vòng quay quanh sao Thổ cùng thời gian với Enceladus hoàn thành 2 vòng quay quanh sao Thổ. Cộng hưởng này duy trì quỹ đạo lệch tâm của Enceladus (0,0047), cung cấp một nguồn năng lượng cho hoạt động địa chất mạnh mẽ của Enceladus.</p>
