--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-04-enceladus.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-04-enceladus.html
@@ -29,7 +29,7 @@ model: enceladus
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: enceladus
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Enceladus là vệ tinh lớn thứ sáu của Sao Thổ. Nó được nhà thiên văn học William Herschel phát hiện vào năm 1789. Trước những năm 1980 (thời điểm 2 tàu vũ trụ Voyager bay ngang qua Enceladus), người ta biết rất ít về Enceladus ngoài việc trên bề mặt vệ tinh này có nước. Enceladus có đường kính khoảng 500 km, bằng 1/10 kích thước của Titan, vệ tinh lớn nhất của Sao Thổ. Nó là thiên thể phản xạ ánh sáng mạnh nhất trong hệ Mặt trời (gần như 100%). Tàu Voyager 1 phát hiện thấy quỹ đạo của Enceladus nằm trong vùng dày nhất của vành đai phân tán E. Người ta cho rằng vành đai này được hình thành từ vật chất phun lên từ cực Nam của Enceladus. Tàu Voyager 2 cho thấy vệ tinh này mặc dù rất nhỏ nhưng lại có một địa hình phức tạp: từ những vùng cổ xưa nhiều miệng hố thiên thạch cho đến những vùng trẻ mới được kiến tạo. Một số vùng có lớp bề mặt mới được tạo ra trong khoảng 100 triệu năm trước đây.</p>
                     <p>Tàu thám hiểm Cassini–Huygens quay quanh Sao Thổ đã cung cấp cho chúng ta thêm nhiều dữ liệu mới về Enceladus. Trong năm 2005, Cassini đã bay rất gần Enceladus, chụp ảnh và phân tích chi tiết bề mặt cũng như môi trường trên Enceladus. Một số trong các dữ liệu thu thập được đã giúp chúng ta trả lời những câu hỏi đã đặt ra sau lần khám phá đầu tiên bởi tàu Voyager, một số lại khiến chúng ta đặt ra những câu hỏi mới. Cụ thể, Cassini phát hiện thấy những cột vật chất chứa nước phun lên từ cực nam của vệ tinh.</p>
                     <p>Cùng với việc phát hiện thấy sự thất thoát nhiệt và sự tồn tại của bề mặt mịn và ít hố thiên thạch ở vùng cực nam, người ta khẳng định được rằng Enceladus hiện vẫn có những hoạt động địa chất. Điều này có thể giải thích được bởi Enceladus là vệ tinh của một gas giant (hành tinh khí khổng lồ). Những hành tinh như vậy thường có một hệ thống vệ tinh với quỹ đạo phức tạp.Một số trong các vệ tinh này cộng hưởng quỹ đạo với nhau, chúng không ổn định hoặc có độ dẹt quỹ đạo nhất định. Vì vậy lực hấp dẫn của hành tinh lên các vệ tinh này luôn luôn thay đổi, khiến cho các tầng bề mặt của vệ tinh co giãn theo chu kì quỹ đạo, tạo ra nhiệt lượng.</p>
