--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-04-hyperion.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-04-hyperion.html
@@ -29,7 +29,7 @@ model: hyperion
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: hyperion
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Hyperion là một vệ tinh tự nhiên của Sao Thổ được khám phá bởi William Cranch Bond, George Phillips Bond và William Lassell vào năm 1848. Nó có thể được phân biệt bởi hình dáng khác thường của nó, sự tự quay hỗn loạn của nó, và một vẻ ngoài giống như bọt biển không được giải thích. Nó là vệ tinh không có hình tròn đầu tiên được phát hiện.</p>
                     <p>Vệ tinh này được đặt tên theo thần Hyperion, vị thần Titan của sự đề phòng và quan sát – anh trai của Cronus, vị thần tương đương với Sao Thổ trong thần thoại Hy Lạp. Nó cũng được đặt ký hiệu là Saturn VII. Dạng tính từ của cái tên này là Hyperionian.</p>
                 </div>
