--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-04-mimas.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-04-mimas.html
@@ -29,7 +29,7 @@ model: mimas
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: mimas
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Mimas được William Herschel phát hiện năm 1789, là vệ tinh lớn thứ 7 Sao Thổ. Mimas còn có tên gọi khác là Saturn I.</p>
                     <p>Mimas là thiên thể nhỏ nhất trong hệ Mặt trời (và cũng là thiên thể có khối lượng bé nhất) có hình cầu. Về đường kính, Mimas là vệ tinh lớn thứ 20 trong các vệ tinh của hệ Mặt trời.</p>
                 </div>
