--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-04-rhea.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-04-rhea.html
@@ -29,7 +29,7 @@ model: rhea
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -45,7 +45,7 @@ model: rhea
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Rhea là vệ tinh lớn thứ hai của Sao Thổ và là vệ tinh lớn thứ 10 trong hệ Mặt Trời. Rhea được Giovanni Domenico Cassini, một nhà thiên văn nổi tiếng người Ý, phát hiện năm 1672.</p>
                     <p>Vệ tinh Rhea được đặt theo tên vị thần khổng lồ Rhea trong Thần thoại Hy Lạp, mẹ của các vị thần. Rhea cũng có tên khác là Saturn V.</p>
                     <p>Lúc đầu Cassini gọi 4 vệ tinh của Sao Thổ mà ông phát hiện ra (Tethys, Dione, Rhea và Iapetus) là Sidera Lodoicea (tiếng La tinh nghĩa là: những vì sao của vua Louis) để vinh danh vua Louis XIV. Tuy nhiên các nhà thiên văn không thích sử dụng cách gọi tên mang tính chất cá nhân như vậy. Lúc đầu họ gọi 4 vệ tinh này là Saturn I, II, III và V (lần lượt theo thứ tự các vệ tinh như trên) cộng thêm Titan là Saturn IV. Sau đó khi phát hiện ra 2 vệ tinh Mimas, Enceladus ở gần Sao Thổ hơn, họ tăng chỉ số ở các vệ tinh này thành III, IV, V và VII. Tiếp đó Hyperion được phát hiện nằm giữa Titan và Iapetus, Iapetus tăng lên thành Saturn VIII. Những tên gọi đó vẫn còn được giữ cho đến ngày nay mặc dù đã có nhiều vệ tinh khác được phát hiện. Như vậy hiện nay, Rhea còn được gọi là Saturn V.</p>
