--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-04-tethys.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-04-tethys.html
@@ -29,7 +29,7 @@ model: tethys
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: tethys
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Tethys là một trong 4 vệ tinh được nhà thiên văn học Giovanni Domenico Cassini phát hiện vào năm 1684. Tethys là một trong 7 vệ tinh lớn của Sao Thổ (đủ lớn để lực cân bằng thủy tĩnh khiến cho thiên thể có hình cầu hoặc gần cầu).</p>
                     <p>Tethys được đặt theo tên gọi thần khổng lồ Titan trong Thần thoại Hy Lạp, một vị nữ thần biển. Ngoài ra nó còn có tên gọi là Saturn III (Sao Thổ III) hoặc là S III Tethys.</p>
                 </div>
