--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-04-titan.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-04-titan.html
@@ -29,7 +29,7 @@ model: titan
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -46,7 +46,7 @@ model: titan
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Titan là vệ tinh lớn nhất của Sao Thổ, vệ tinh duy nhất có bầu khí quyển đặc và là vật thể duy nhất trừ Trái Đất có bằng chứng rõ ràng về nước đã được khám phá.</p>
                     <p>Titan là vệ tinh ở khoảng cách xa thứ hai mươi hai của Sao Thổ và xa thứ sáu trong nhóm những vệ tinh có kích thước đủ lớn để có hình cầu. Thường được miêu tả như một vệ tinh có những đặc điểm giống hành tinh, Titan có đường kính lớn hơn khoảng 50% so với Mặt Trăng của Trái Đất và có khối lượng lớn hơn 80%. Nó là vệ tinh lớn thứ hai trong Hệ Mặt Trời, sau vệ tinh Ganymede của Sao Mộc, và nếu tính theo đường kính nó còn lớn hơn hành tinh nhỏ nhất, Sao Thuỷ, (dù chỉ có khối lượng bằng một nửa). Titan là vệ tinh được phát hiện đầu tiên của Sao Thổ, nó được khám phá năm 1655 bởi nhà thiên văn học người Hà Lan Christiaan Huygens.</p>
                     <p>Titan được cấu tạo chủ yếu gồm các vật liệu băng nước và đá. Mật độ khí quyển dày đặc khiến chúng ta khó tìm hiểu về bề mặt của Titan cho tới khi các thông tin mới được thu thập với phi vụ Cassini–Huygens năm 2004, gồm việc phát hiện ra các hồ hydrocarbon lỏng tại các vùng cực của vệ tinh này. Chúng là những vật thể lỏng lớn, ổn định duy nhất tồn tại trên bề mặt của bất kỳ một vật thể từng biết nào ngoài Trái Đất. Về địa chất, bề mặt vệ tinh này còn trẻ; dù các ngọn núi và nhiều núi lửa băng (dạng phun trào giống núi lửa nhưng thành phần chủ yếu là băng) có thể có đã được phát hiện, bề mặt khá phẳng với chỉ một ít hố va chạm.</p>
