--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-05-ariel.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-05-ariel.html
@@ -29,7 +29,7 @@ model: ariel
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: ariel
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Ariel là vệ tinh lớn thứ tư của 27 vệ tinh đã biết của sao Thiên Vương. Ariel quay trong mặt phẳng xích đạo của sao Thiên Vương, gần như vuông góc với quỹ đạo của sao Thiên Vương, và do đó có một chu kỳ mùa rất đột ngột.</p>
                     <p>Vệ tinh này được William Lassell phát hiện vào tháng 10 năm 1851, và đặt tên cho một nhân vật trong hai mảng khác nhau của văn học. Tính đến năm 2012, phần lớn các thông tin chi tiết của Ariel thu được từ một lần bay ngang duy nhất qua sao Thiên vương do tàu vũ trụ Voyager 2 thực hiện vào năm 1986, và chụp ảnh được khoảng 35% diện tích bề mặt của vệ tinh này. Hiện tại không có kế hoạch nào nghiên cứu vệ tinh này chi tiết hơn nữa, mặc dù nhiều dự án phóng tàu thăm dò Sao Thiên Vương đã được đề xuất.</p>
                     <p>Sau Miranda, Ariel là vệ tinh nhỏ thứ hai của năm vệ tinh quay xung quanh sao Thiên Vương, và là vệ tinh thứ hai tính từ trong cùng. Đây là một trong các vệ tinh nhỏ nhất trong số 19 vệ tinh có hình cầu được biết đến của hệ Mặt Trời (xếp thứ 14 đường kính), nó được cấu trúc từ hai vật liệu băng và đá với khối lượng gần như tương đương. Giống như tất cả các mặt trăng của sao Thiên Vương, Ariel có thể hình thành từ một đĩa bồi tụ bao quanh hành tinh này trong thời gian ngắn sau khi kiến tạo sao, và giống như các vệ tinh lớn khác, đó là sự phân biệt về địa chất, với một lõi đá bên trong bao quanh bởi một lớp vỏ băng. Ariel có một bề mặt phức tạp bao gồm địa hình bị cắt gọt thành hàng loạt các vách núi, hẻm núi và rặng núi. Bề mặt của nó cho thấy dấu hiệu của hoạt động địa chất gần đây hơn vệ tinh khác, có thể do nhiệt triều.</p>
