--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-05-miranda.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-05-miranda.html
@@ -29,7 +29,7 @@ model: miranda
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: miranda
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Miranda, hay Uranus V, là vệ tinh nhỏ nhất và nằm trong cùng trong số năm vệ tinh tự nhiên chính của Sao Thiên Vương. Giống như 27 vệ tinh tự nhiên còn lại, Miranda quay xung quanh Sao Thiên Vương theo quỹ đạo song song với xích đạo của hành tinh này. Với đường kính chỉ 470 km, Miranda là một trong những vật thể nhỏ nhất trong Hệ Mặt Trời có dạng cầu do lực hấp dẫn của chính nó, chỉ sau Mimas, vệ tinh tự nhên của Sao Thổ.</p>
                     <p>Miranda là một trong những vật thể có địa hình đa dạng nhất trong Hệ Mặt Trời, trong số đó có Verona Rupes, sườn dốc sâu nhất trong Hệ Mặt Trời với độ sâu 20 km. Nguồn gốc và quá trình tiến hóa của vẫn chưa được, và nhiều giả thuyết đã được đưa ra về sự hình thành của vệ tinh này.</p>
                     <p>Miranda được Gerard Kuiper tìm ra vào ngày 16 tháng 2 năm 1948 tại đài thiên văn McDonald và được ông đặt tên theo nhân vật Miranda trong vở kịch Giông tố của William Shakespeare. Dạng tính từ của tên gọi này là Mirandan. Nó còn có tên gọi khác là Uranus V.</p>
