--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-05-oberon.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-05-oberon.html
@@ -29,7 +29,7 @@ model: triton
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: triton
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Triton là vệ tinh tự nhiên lớn nhất của Sao Hải Vương và là vệ tinh đầu tiên của Sao Hải Vương được phát hiện. Nó được khám phá vào ngày 10 tháng 10 năm 1846 bởi nhà thiên văn học người Anh William Lassell. Đây là vệ tinh lớn duy nhất trong Hệ Mặt Trời có quỹ đạo nghịch hành, quỹ đạo theo hướng ngược với vòng quay của hành tinh. Với đường kính 2.710 kilômét (1.680 mi), đây là vệ tinh lớn thứ bảy trong Hệ Mặt Trời, vệ tinh duy nhất của Sao Hải Vương đủ lớn để ở trạng thái cân bằng thủy tĩnh và vệ tinh hành tinh lớn thứ hai so với hành tinh của nó, sau Mặt Trăng của Trái Đất. Do quỹ đạo nghịch hành và thành phần tương tự như Sao Diêm Vương, Triton được cho là một hành tinh lùn bị bắt từ vành đai Kuiper.</p>
                     <p>Triton được Camille Flammarion đặt tên theo vị thần biển Triton trong thần thoại Hy Lạp, con trai của thần Poseidon và nữ thần biển Amphitrite, năm 1880. Có lẽ hơi lạ là William Lassell, người phát hiện lại không đặt tên cho vệ tinh này vì chỉ vài năm sau, ông đã đặt tên cho những vệ tinh mới do ông phát hiện như mặt trăng thứ tám của Sao Thổ (Hyperion) và mặt trăng thứ ba và bốn của Sao Thiên Vương (Ariel và Umbriel).</p>
                     <p>Tuy nhiên chỉ đến khi mặt trăng thứ hai của Sao Hải Vương là Nereid được phát hiện thì Triton mới trở thành tên gọi chính thức của vệ tinh này.</p>
