--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-05-titania.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-05-titania.html
@@ -29,7 +29,7 @@ model: titania
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: titania
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Titania là vệ tinh lớn nhất về thể tích và khối lượng của Sao Thiên Vương, vệ tinh lớn thứ 8 trong Hệ Mặt Trời. Tính theo khoảng cách từ bề mặt Sao Thiên Vương thì nó là vệ tinh thứ 17 nếu không kể các vành đai. Quỹ đạo của nó nằm trong vùng chịu ảnh hưởng từ quyển Sao Thiên Vương. Tên Titania được đặt theo tên một nhân vật trong vở kịch A Midsummer Night's Dream của William Shakespeare.</p>
                     <p>William Herschel đã phát hiện ra hai vệ tinh của Sao Thiên Vương là Titania và Oberon ngày 11 tháng 1 năm 1787. Sau này, ông còn thông báo là đã tìm thấy bốn vệ tinh nữa của Sao Thiên Vương, tuy nhiên, những phát hiện về sau này của ông đã bị các quan sát khác bác bỏ. Vào thời đó, trong vòng khoảng năm mươi năm sau phát hiện của William Herschel, không có một báo cáo nào của ai khác công bố nhìn thấy hai vệ tinh này. Ngày nay, với kỹ thuật quan sát thiên văn nghiệp dư tiên tiến, người ta cũng có thể dễ dàng nhận ra hai vệ tinh này của Sao Thiên Vương.</p>
                     <p>Các vệ tinh của Sao Thiên Vương đều được đặt tên theo các nhân vật của William Shakespeare hoặc Alexander Pope. Titania là tên của một nữ hoàng của các vị tiên trong vở kịch viết năm 1596 "Giấc mộng đêm hè" bởi William Shakespeare.</p>
