--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-05-umbriel.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-05-umbriel.html
@@ -29,7 +29,7 @@ model: umbriel
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: umbriel
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Umbriel là vệ tinh lớn thứ ba của Sao Thiên Vương, được William Lassell phát hiện vào ngày 24 tháng 10 năm 1851. Nó được phát hiện cùng lúc với Ariel và được đặt tên theo một nhân vật trong Alexander Pope bài thơ của "The Rape of Lock". Umbriel bao gồm chủ yếu là băng đá với một phần đáng kể của đá, và có thể được phân biệt thành đá chính và một lớp phủ băng. Bề mặt là đen tối nhất trong số các vệ tinh Uranian, và dường như đã được định hình chủ yếu là do các va chạm. Tuy nhiên, sự hiện diện của các hẻm núi gợi ý các quá trình nội sinh sớm, và mặt trăng có thể đã trải qua một sự kiện tái tạo bề mặt do nội sinh định hướng sớm khiến bề mặt cũ của nó bị xóa sổ.</p>
                     <p>Được bao phủ bởi rất nhiều hố thiên thạch kích thước 210 km (130 dặm) đường kính, Umbriel là vệ tinh có nhiều hố thiên thạch sau vệ tinh thứ hai của Sao Thiên Vương là Oberon. Các tính năng nổi bật nhất là bề mặt một vòng vật chất sáng trên sàn Wunda miệng núi lửa. Mặt trăng này, giống như tất cả các mặt trăng của Sao Thiên Vương, có thể hình thành từ một đĩa bồi đắp dần bao quanh hành tinh ngay sau khi nó hình thành. Hệ thống Uranian đã được nghiên cứu đến gần một lần: bởi các tàu vũ trụ Voyager 2 vào tháng 1 năm 1986. Phải mất một vài hình ảnh của Umbriel, cho phép lập bản đồ khoảng 40% bề mặt của nó.</p>
                 </div>
