--- a/_posts/kien-thuc/he-mat-troi/hanh-tinh-lun/2021-06-01-eris.html
+++ b/_posts/kien-thuc/he-mat-troi/hanh-tinh-lun/2021-06-01-eris.html
@@ -28,7 +28,7 @@ model: eris
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -45,7 +45,7 @@ model: eris
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>136199 Eris (trước đây được gọi là 2003 UB313) là hành tinh lùn lớn thứ hai trong Thái Dương hệ sau Sao Diêm Vương và là thiên thể thứ 11 quay quanh Mặt Trời (tính theo khoảng cách, không kể vành đai Kuiper và các vệ tinh tự nhiên). Đầu tiên, Eris được nhận diện là thiên thể ngoài Hải Vương tinh (TNO) mà các nhà thiên văn California tại đài thiên văn trên đỉnh Palomar miêu tả là "lớn hơn rõ rệt" so với Sao Diêm Vương thiên thể này được các nhà thiên văn học phát hiện, NASA và một số phương tiện thông tin đại chúng coi là hành tinh thứ mười, nhưng vẫn chưa rõ ràng là nó sẽ được chấp nhận rộng rãi như là một hành tinh mới hay không. Nó có ít nhất một vệ tinh, điều này sẽ cho phép các nhà điều tra đo đạc khối lượng của hệ thống này.</p>
                     <p>Tên gọi chính thức của thiên thể này vẫn chưa có, mặc dù các nhà phát hiện ra nó đã đề nghị tên có thể cho nó tới Hiệp hội thiên văn quốc tế (IAU), là cơ quan xem xét các quy ước đặt tên thiên văn. Tuyên bố cho rằng 2003 UB313 được đặt tên là 'Xena' hay 'Lila' là không chính xác; cả hai tên gọi này đã được các nhà phát hiện sử dụng một cách thân mật nhưng chẳng có tên nào trong chúng đã được đệ trình tới IAU. Quy tắc để đặt tên cho 2003 UB313 hiện nay bị trì hoãn phụ thuộc vào các quyết định có nên phổ biến định nghĩa thuật ngữ 'hành tinh' một cách hình thức hay không và địa vị của thiên thể này theo định nghĩa như thế nào.</p>
                     <p>Tên gọi Eris được đặt theo tên của vị thần Eris trong thần thoại Hy Lạp, người đã gây ra cuộc chiến thành Troia.</p>
