--- a/_posts/kien-thuc/he-mat-troi/hanh-tinh/2021-04-07-sao-tho.html
+++ b/_posts/kien-thuc/he-mat-troi/hanh-tinh/2021-04-07-sao-tho.html
@@ -28,7 +28,7 @@ model: sao-tho
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -36,6 +36,9 @@ model: sao-tho
                         <p><strong>Diện tích bề mặt: </strong>4,27E10 km²</p>
                         <p><strong>Mật độ: </strong>687 kg/m³</p>
                         <p><strong>Bán kính: </strong>58.232 km</p>
+                        <p><strong>Thể tích: </strong>8,2713×10<sup>14</sup> km<sup>3</sup></p>
+                        <p><strong>Khối lượng: </strong>5,6846×10<sup>26</sup> kg</p>
+                        <p><strong>Độ nghiêng trục quay: </strong>26,73°</p>
                     </div>
                 </div>
             </div>
@@ -44,10 +47,11 @@ model: sao-tho
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
-                    <p>Sao Thổ là hành tinh thứ sáu tính theo khoảng cách trung bình từ Mặt Trời và là hành tinh lớn thứ hai về đường kính cũng như khối lượng, sau Sao Mộc trong Hệ Mặt Trời. Tên tiếng Anh của hành tinh mang tên thần Saturn trong thần thoại La Mã, ký hiệu thiên văn của hành tinh là (♄) thể hiện cái liềm của thần. Sao Thổ là hành tinh khí khổng lồ với bán kính trung bình bằng 9 lần của Trái Đất. Tuy khối lượng của hành tinh cao gấp 95 lần khối lượng của Trái Đất nhưng với thể tích lớn hơn 763 lần, khối lượng riêng trung bình của Sao Thổ chỉ bằng một phần tám so với của Trái Đất.</p>
-                    <p>Cấu trúc bên trong của Sao Thổ có lẽ bao gồm một lõi sắt, nikel và đá (hợp chất silic và ôxy), bao quanh bởi một lớp dày hiđrô kim loại, một lớp trung gian giữa hiđrô lỏng với heli lỏng và bầu khí quyển bên trên cùng. Hình ảnh hành tinh có màu sắc vàng nhạt là do sự có mặt của các tinh thể amoniac trong tầng thượng quyển. Dòng điện bên trong lớp hiđrô kim loại là nguyên nhân Sao Thổ có một từ trường hành tinh với cường độ hơi yếu hơn so với từ trường của Trái Đất và bằng một phần mười hai so với cường độ từ trường của Sao Mộc. Lớp khí quyển bên trên cùng hành tinh có những màu đồng nhất và hiện lên dường như yên ả so với bầu khí quyển hỗn loạn của Sao Mộc, mặc dù nó cũng có những cơn bão mạnh. Tốc độ gió trên Sao Thổ có thể đạt tới 1.800 km/h, nhanh hơn trên Sao Mộc, nhưng không nhanh bằng tốc độ gió trên Sao Hải Vương.</p>
-                    <p>Sao Thổ có một hệ thống vành đai bao gồm chín vành chính liên tục và ba cung đứt đoạn, chúng chứa chủ yếu hạt băng với lượng nhỏ bụi và đá. Sao Thổ có 82 vệ tinh tự nhiên đã biết; trong đó 53 vệ tinh đã được đặt tên. Số lượng vệ tinh này không bao gồm hàng trăm tiểu vệ tinh ("moonlet") bên trong vành đai. Titan là vệ tinh lớn nhất của Sao Thổ và là vệ tinh lớn thứ hai trong Hệ Mặt Trời, nó cũng lớn hơn cả Sao Thủy và là vệ tinh tự nhiên duy nhất trong Hệ Mặt Trời có bầu khí quyển dày đặc.</p>
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
+                    <p><strong>Sao Thổ là hành tinh thứ sáu tính theo khoảng cách trung bình từ Mặt Trời và là hành tinh lớn thứ hai về đường kính cũng như khối lượng, sau Sao Mộc trong Hệ Mặt Trời</strong>. Tên tiếng Anh của hành tinh mang tên thần Saturn trong thần thoại La Mã, ký hiệu thiên văn của hành tinh là (♄) thể hiện cái liềm của thần. Sao Thổ là hành tinh khí khổng lồ với bán kính trung bình bằng 9 lần của Trái Đất. Tuy khối lượng của hành tinh cao gấp 95 lần khối lượng của Trái Đất nhưng với thể tích lớn hơn 763 lần, khối lượng riêng trung bình của Sao Thổ chỉ bằng một phần tám so với của Trái Đất.</p>
+                    <p><strong>Cấu trúc bên trong của Sao Thổ có lẽ bao gồm một lõi sắt, nikel và đá (hợp chất silic và ôxy), bao quanh bởi một lớp dày hiđrô kim loại, một lớp trung gian giữa hiđrô lỏng với heli lỏng và bầu khí quyển bên trên cùng</strong>. Hình ảnh hành tinh có màu sắc vàng nhạt là do sự có mặt của các tinh thể amoniac trong tầng thượng quyển. Dòng điện bên trong lớp hiđrô kim loại là nguyên nhân Sao Thổ có một từ trường hành tinh với cường độ hơi yếu hơn so với từ trường của Trái Đất và bằng một phần mười hai so với cường độ từ trường của Sao Mộc. Lớp khí quyển bên trên cùng hành tinh có những màu đồng nhất và hiện lên dường như yên ả so với bầu khí quyển hỗn loạn của Sao Mộc, mặc dù nó cũng có những cơn bão mạnh. Tốc độ gió trên Sao Thổ có thể đạt tới 1.800 km/h, nhanh hơn trên Sao Mộc, nhưng không nhanh bằng tốc độ gió trên Sao Hải Vương.</p>
+                    <p><strong>Sao Thổ có một hệ thống vành đai bao gồm chín vành chính liên tục và ba cung đứt đoạn</strong>, chúng chứa chủ yếu hạt băng với lượng nhỏ bụi và đá.</p>
+                    <p><strong>Sao Thổ có 82 vệ tinh tự nhiên đã biết; trong đó 53 vệ tinh đã được đặt tên</strong>. Số lượng vệ tinh này không bao gồm hàng trăm tiểu vệ tinh ("moonlet") bên trong vành đai. Titan là vệ tinh lớn nhất của Sao Thổ và là vệ tinh lớn thứ hai trong Hệ Mặt Trời, nó cũng lớn hơn cả Sao Thủy và là vệ tinh tự nhiên duy nhất trong Hệ Mặt Trời có bầu khí quyển dày đặc.</p>
                 </div>
             </div>
         </div>
