--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-03-io.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-03-io.html
@@ -29,7 +29,7 @@ model: io
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: io
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Io là vệ tinh tự nhiên nằm phía trong cùng trong số bốn vệ tinh Galileo của Sao Mộc và với đường kính 3.642 kilômét, là vệ tinh lớn thứ tư bên trong hệ Mặt Trời. Nó được đặt theo tên Io, người nữ tư tế của Hera và sau đó trở thành tình nhân của thần Zeus.</p>
                     <p>Với hơn 400 núi lửa đang hoạt động, Io là thiên thể có hoạt động địa chất mạnh nhất trong hệ Mặt Trời. Hoạt động địa chất mạnh bất thường này là kết quả của nhiệt thủy triều từ sự ma sát sinh ra bên trong Io do lực kéo biến đổi của Sao Mộc. Nhiều núi lửa phun ra khói lưu huỳnh và điôxít lưu huỳnh có độ cao lên tới 500 km (310 dặm Anh). Bề mặt Io cũng lấm chấm với hơn 100 ngọn núi, được nâng lên bởi lực nén mạnh tại đáy của lớp vỏ silicat của vệ tinh này. Vài đỉnh còn cao hơn cả Everest trên Trái Đất. Không giống hầu hết các vệ tinh ở phía ngoài hệ Mặt Trời có lớp băng bao phủ dày, Io chủ yếu gồm lớp đá silicat bao quanh một lõi sắt hay sulfua sắt nóng chảy. Đa phần bề mặt Io có đặc trưng là các đồng bằng rộng lớn được che phủ trong băng giá lưu huỳnh và điôxít lưu huỳnh.</p>
                     <p>Hoạt động núi lửa của Io là nguyên nhân gây ra phần lớn những đặc điểm độc đáo của vệ tinh này. Các cột khói núi lửa và các dòng dung nham trên Io tạo ra những thay đổi bề mặt lớn và tô lên đó nhiều màu sắc đỏ, vàng, trắng, đen và xanh, chủ yếu vì các hợp chất lưu huỳnh. Nhiều dòng chảy dung nham lớn, dài hơn 500 km, cũng là đặc điểm của bề mặt. Những quá trình núi lửa này khiến bề mặt của Io được so sánh với một chiếc bánh pizza. Các chất do núi lửa phun ra là vật liệu tạo thành khí quyển mỏng và loang lổ của Io và quyển từ lớn của Sao Mộc.</p>
