--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-04-iapetus.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-04-iapetus.html
@@ -29,7 +29,7 @@ model: iapetus
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: iapetus
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Iapetus là vệ tinh lớn thứ ba của Sao Thổ (sau Titan và Rhea) và là vệ tinh lớn thứ 11 trong hệ Mặt trời. Iapetus được nhà thiên văn học Giovanni Domenico Cassini phát hiện vào năm 1671. Đây là một vệ tinh hết sức đặc biệt trước hết là bởi vì 2 nửa bán cầu của nó có 2 màu khác nhau rõ rệt. Tiếp đó có thể kể đến một đặc điểm hình dáng rất bất thường và bí ẩn. Đó là một dãy núi cao chạy dọc xích đạo có chiều dài bằng nửa chu vi vệ tinh.</p>
                     <p>Iapetus được nhà thiên văn học người Italia Giovanni Domenico Cassini phát hiện vào tháng 10 năm 1671 ở cạnh phía tây của Sao Thổ. Đầu năm 1672, dự đoán rằng vệ tinh này sẽ xuất hiện lại ở cạnh phía đông của Sao Thổ, ông đã nỗ lực quan sát và tìm kiếm nó nhưng không thành công. Tiếp sau đó ông lại quan sát thấy hiện tượng nói trên xảy ra một lần nữa vào tháng 12 năm 1672 và tháng 2 năm 1673. Trong mỗi lần như vậy, ông bỏ ra 14 ngày quan sát vệ tinh này khi nó dịch chuyển ở cạnh phía tây của Sao Thổ. Tuy nhiên khi quan sát ở cạnh phía đông thì không thấy gì cả. Phải mãi đến năm 1705, sử dụng một kính thiên văn tốt hơn, ông mới nhìn thấy được Iapetus khi nó dịch chuyển bên phần phía đông. Độ rọi của vệ tinh này giữa 2 vị trí phía đông và phía tây Sao Thổ có sự chênh lệch lớn lên tới gần 2 đơn vị.</p>
                     <p>Từ những kết quả nói trên, Cassini dự đoán rằng Iapetus có một nửa bề mặt có màu sáng và nửa còn lại có màu tối. Do hiện tượng Iapetus luôn chỉ quay một mặt về phía Sao Thổ khi nó quay quanh hành tinh này, khi quan sát thấy nó ở phần phía tây của Sao Thổ, ta sẽ thấy bề mặt sáng màu và khi nó ở phía đông Sao Thổ thì ngược lại. Mặt bán cầu tối màu sau đó được đặt tên là Cassini Regio theo tên của ông.</p>
