--- a/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-06-triton.html
+++ b/_posts/kien-thuc/he-mat-troi/ve-tinh/2021-05-06-triton.html
@@ -29,7 +29,7 @@ model: oberon
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 margin-30px-bottom">
-                    <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white h-100">
+                    <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px h-100 know_detail__info">
                         <h6 class="alt-font font-weight-600">
                             {{ page.title | escape }}
                         </h6>
@@ -47,7 +47,7 @@ model: oberon
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-12">
-                <div class="bg-black padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px text-white">
+                <div class="padding-40px-all sm-padding-30px-all last-paragraph-no-margin border-radius-6px know_detail__content">
                     <p>Oberon là vệ tinh lớn và nằm phía ngoài cùng trong nhóm vệ tinh chính của Sao Thiên Vương. Đây là vệ tinh lớn và nặng thứ hai của Sao Thiên Vương, là vệ tinh nặng thứ 9 và là vật thể nặng thứ 21 trong Hệ Mặt Trời. Vệ tinh này do William Herschel phát hiện năm 1787, Oberon được đặt tên theo một nhân vật trong tác phẩm của Shakespeare Giấc mộng đêm hè. Một phần quỹ đạo của nó nằm phía ngoài từ quyển của Sao Thiên Vương.</p>
                     <p>Oberon được cấu tạo từ băng và đá với lượng xấp xỉ bằng nhau, và có khả năng có sự phân dị giữa lõi đá và lớp phủ băng. Một tầng nước lỏng có thể tồn tại ở ranh giới giữa lõi và lớp phủ. Bề mặt của Oberon, có màu đen và đỏ nhạt, có lẽ ban đầu đã được định hình chủ yếu do va chạm với các tiểu hành tinh và sao chổi. Nó được bao phủ bởi nhiều hố va chạm đạt đường kính đến 210 km. Oberon sở hữu một hệ thống các hẻm núi được hình thành từ sự mở rộng các thành phần bên trong vào thời kỳ đầu tiến hoá của thiên thể này. Vệ tinh này có thể đã được hình thành từ đĩa bồi tụ bao quanh Sao Thiên Vương ngay sau khi hành tinh này hình thành.</p>
                     <p>Cho đến năm 2010, hệ thống vệ tinh Sao Thiên Vương chỉ được nghiên cứu kỹ càng một lần bởi tàu không gian Voyager 2 vào tháng 1 năm 1986. Nó đã chụp nhiều hình ảnh về Oberon, cho phép con người có thể lập được bản đồ về 40% diện tích bề mặt Oberon.</p>
